tests/paczka1/small_fuzzy/29096443.err
Error in line 7: zAa9TUjTfh S620 0,9
Error in line 16: McVA3KVO Az0z 0,9
